libs/slim/test/typecheck/fail/argument_number.shader
shader vertex {
    ivec3(1, 2);
    return vec4(0.0, 0.0, 0.0, 1.0);
}
